# FrenchLefffLemmatizer

./: pyproject.toml
